registro nna mejoras

--- a/src/app/admin/registros/registro-nna/registro-nna.component.html
+++ b/src/app/admin/registros/registro-nna/registro-nna.component.html
@@ -204,7 +204,7 @@
 
         <!-- Botón Guardar -->
         <div class="button-container mt-4" style="text-align: -webkit-right;">
-          <input type="hidden" formControlName="territorio_id">
+          <input type="text" formControlName="cod_territorio">
 
           <button type="submit"
                   class="btn btn-success"
